force-app/main/default/objects/Account/fields/Apellido_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Contacto__c</fullName>
    <label>Apellido Contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>