force-app/main/default/objects/Account/fields/Nombre_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Contacto__c</fullName>
    <label>Nombre Contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>