force-app/main/default/objects/Account/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>viajes individuales</fullName>
            </value>
            <value>
                <fullName>alquileres de vehiculos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>