force-app/main/default/objects/Account/recordTypes/Alquileres_de_vehiculos.recordType-meta.xml
<RecordType>
    <fullName>Alquileres_de_vehiculos</fullName>
    <active>true</active>
    <label>Alquileres de vehiculos</label>
</RecordType>