force-app/main/default/objects/Account/recordTypes/Viajes_individuales.recordType-meta.xml
<RecordType>
    <fullName>Viajes_individuales</fullName>
    <active>true</active>
    <label>Viajes individuales</label>
</RecordType>