force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Servicio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Servicio__c</field>
        <operation>equals</operation>
        <value>viajes individuales,alquileres de vehiculos</value>
    </filters>
    <label>All Accounts</label>
</ListView>